# ncnn-yolov12-android

.github/workflows/: android.yml
app/src/main/cpp/: CMakeLists.txt
